--- a/app/src/main/res/layout/activity_suggestion.xml
+++ b/app/src/main/res/layout/activity_suggestion.xml
@@ -2,19 +2,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.hackaton.ne4istb.antifastfood.SuggestionActivity">
+    tools:context="com.hackaton.ne4istb.antifastfood.SuggestionActivity"
+    android:background="@drawable/bg_simple"
+    >
 
     <ListView
         android:id="@+id/fragment_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dp" >
+        android:layout_centerHorizontal="true">
+
     </ListView>
 
 </RelativeLayout>
