--- a/app/src/main/res/layout/suggestion_item.xml
+++ b/app/src/main/res/layout/suggestion_item.xml
@@ -2,12 +2,21 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal" >
+    android:orientation="horizontal"
+    android:paddingBottom="10dp"
+    android:paddingTop="10dp"
+    android:paddingRight="10dp"
+    android:paddingLeft="0dp"
+    android:background="#fff"
+     >
+
 
     <ImageView
         android:id="@+id/flag"
         android:layout_width="160dp"
         android:layout_height="120dp"
+        android:background="@drawable/roundcorners"
+        android:layout_alignParentLeft="true"
         />
 
     <LinearLayout
@@ -44,5 +53,13 @@
             android:ellipsize="end"/>
 
     </LinearLayout>
+
+    <ImageView
+        android:layout_width="100dp"
+        android:layout_height="120dp"
+        android:id="@+id/googleway"
+        android:layout_alignParentRight="true"
+        android:padding="25dp"/>
+
 
 </RelativeLayout>
