change style xml

--- a/app/src/main/res/layout/activity_suggestion.xml
+++ b/app/src/main/res/layout/activity_suggestion.xml
@@ -3,15 +3,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.hackaton.ne4istb.antifastfood.SuggestionActivity"
-    android:background="@drawable/bg_simple"
-    >
+    android:background="@drawable/bg_simple">
 
     <ListView
         android:id="@+id/fragment_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true">
+        android:layout_centerHorizontal="true"
+        android:divider="@null"
+        android:dividerHeight="0dp"
+        >
 
     </ListView>
 
