--- a/app/src/main/res/layout/suggestion_item.xml
+++ b/app/src/main/res/layout/suggestion_item.xml
@@ -1,65 +1,76 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal"
-    android:paddingBottom="10dp"
-    android:paddingTop="10dp"
-    android:paddingRight="10dp"
-    android:paddingLeft="0dp"
-    android:background="#fff"
-     >
+    android:paddingBottom="2dp"
+    android:paddingTop="2dp">
 
-
-    <ImageView
-        android:id="@+id/flag"
-        android:layout_width="160dp"
+    <RelativeLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
         android:layout_height="120dp"
-        android:background="@drawable/roundcorners"
-        android:layout_alignParentLeft="true"
-        />
-
-    <LinearLayout
-        android:id="@+id/text_desc"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:layout_toRightOf="@id/flag"
-        android:padding="10dp"
-        >
-
-        <TextView
-            android:id="@+id/suggestion_name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Name: "
-            android:singleLine="true"
-            android:ellipsize="end"/>
-
-        <TextView
-            android:id="@+id/suggestion_address"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Address: "
-            android:singleLine="true"
-            android:ellipsize="end"/>
-
-        <TextView
-            android:id="@+id/suggestion_site"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Site: "
-            android:singleLine="true"
-            android:ellipsize="end"/>
-
-    </LinearLayout>
-
-    <ImageView
-        android:layout_width="100dp"
-        android:layout_height="120dp"
-        android:id="@+id/googleway"
-        android:layout_alignParentRight="true"
-        android:padding="25dp"/>
+        android:orientation="horizontal"
+        android:paddingRight="10dp"
+        android:paddingLeft="0dp"
+        android:background="#fff">
 
 
-</RelativeLayout>
+        <ImageView
+            android:id="@+id/leftside"
+            android:layout_width="160dp"
+            android:layout_height="120dp"
+            android:background="#ffdbdbdb"
+            android:layout_alignParentLeft="true"
+            />
+        <RelativeLayout
+            android:layout_width="110dp"
+            android:layout_height="fill_parent"
+            android:layout_toRightOf="@+id/leftside"
+            android:id="@+id/rightside">
+
+            <LinearLayout
+                android:id="@+id/text_desc"
+                android:layout_alignParentLeft="true"
+                android:layout_width="fill_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:padding="10dp">
+
+                <TextView
+                    android:id="@+id/suggestion_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Name: "
+                    android:singleLine="true"
+                    android:ellipsize="end"/>
+
+                <TextView
+                    android:id="@+id/suggestion_address"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Address: "
+                    android:singleLine="true"
+                    android:ellipsize="end"/>
+
+                <TextView
+                    android:id="@+id/suggestion_site"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Site: "
+                    android:singleLine="true"
+                    android:ellipsize="end"/>
+
+            </LinearLayout>
+
+        </RelativeLayout>
+
+        <ImageView
+            android:layout_width="50dp"
+            android:layout_height="match_parent"
+            android:id="@+id/googleway"
+            android:layout_alignParentRight="true"
+            android:padding="25dp"/>
+
+    </RelativeLayout>
+</LinearLayout>
