--- a/app/src/main/res/layout/suggestion_item.xml
+++ b/app/src/main/res/layout/suggestion_item.xml
@@ -24,7 +24,7 @@
             android:layout_alignParentLeft="true"
             />
         <RelativeLayout
-            android:layout_width="110dp"
+            android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:layout_toRightOf="@+id/leftside"
             android:id="@+id/rightside">
