--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,9 +6,7 @@
 <WebView
     android:id="@+id/webview"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-
-    >
+    android:layout_height="fill_parent">
 
 </WebView>
 </RelativeLayout>
