--- a/app/src/main/res/layout/suggestion_item.xml
+++ b/app/src/main/res/layout/suggestion_item.xml
@@ -9,18 +9,18 @@
     <RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="120dp"
+        android:layout_height="90dp"
         android:orientation="horizontal"
         android:paddingRight="10dp"
         android:paddingLeft="0dp"
-        android:background="#fff">
+        android:background="#33ffffff">
 
 
         <ImageView
             android:id="@+id/leftside"
-            android:layout_width="160dp"
-            android:layout_height="120dp"
-            android:background="#ffdbdbdb"
+            android:layout_width="70dp"
+            android:layout_height="90dp"
+            android:background="#ff1488db"
             android:layout_alignParentLeft="true"
             />
         <RelativeLayout
@@ -35,30 +35,38 @@
                 android:layout_width="fill_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
-                android:padding="10dp">
+                android:padding="5dp">
 
                 <TextView
                     android:id="@+id/suggestion_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Name: "
                     android:singleLine="true"
+                    android:textColor="#ffffff"
                     android:ellipsize="end"/>
 
                 <TextView
                     android:id="@+id/suggestion_address"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Address: "
                     android:singleLine="true"
+                    android:textColor="#ffffff"
                     android:ellipsize="end"/>
 
                 <TextView
                     android:id="@+id/suggestion_site"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Site: "
                     android:singleLine="true"
+                    android:textColor="#ffffff"
+                    android:ellipsize="end"/>
+
+                <TextView
+                    android:id="@+id/suggestion_distance"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:singleLine="true"
+                    android:textColor="#ffffff"
                     android:ellipsize="end"/>
 
             </LinearLayout>
