--- a/app/src/main/res/layout/suggestion_item.xml
+++ b/app/src/main/res/layout/suggestion_item.xml
@@ -74,10 +74,11 @@
         </RelativeLayout>
 
         <ImageView
-            android:layout_width="50dp"
-            android:layout_height="match_parent"
+            android:layout_width="80dp"
             android:id="@+id/googleway"
             android:layout_alignParentRight="true"
+
+            android:layout_height="90dp"
             android:padding="25dp"/>
 
     </RelativeLayout>
