--- a/app/src/main/assets/style.css
+++ b/app/src/main/assets/style.css
@@ -1,3 +1,4 @@
+
 html,
 body,
 .main,
@@ -18,12 +19,19 @@ svg {
 }
 
 
-
 .line-drawing path {
   fill: none;
   stroke: rgb(70, 138, 7);
   stroke-width: 3;
 
+}
+.logoup{
+  margin-top: -180px;
+
+  transition:All 0.5s ease;
+  -webkit-transition:All 0.5s ease;
+  -moz-transition:All 0.5s ease;
+  -o-transition:All 0.5s ease;
 }
 .line-drawing.clear path{
   fill: rgb(70, 138, 7);
@@ -34,6 +42,7 @@ svg {
   -webkit-transition:All 0.5s ease;
   -moz-transition:All 0.5s ease;
   -o-transition:All 0.5s ease;
+  
   
 }
 
@@ -49,3 +58,145 @@ path.stroke-thin {
   stroke-width: 1;
 }
 
+
+.btn {
+
+
+
+  border: none;
+  font-family: inherit;
+  font-size: inherit;
+  color: inherit;
+  background: none;
+  cursor: pointer;
+  padding: 12px 80px;
+  display: inline-block;
+  margin: 15px 30px;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-weight: 700;
+  outline: none;
+  position: relative;
+  -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  transition: all 0.3s;
+}
+
+.btn-1 {
+  border: 3px solid rgb(70, 138, 7);
+  color: rgb(70, 138, 7);
+}
+.btn-1e:hover, .btn-1e:active {
+  color: #fff;
+}
+.btn-1e:after {
+  width: 100%;
+  height: 0;
+  top: 50%;
+  left: 50%;
+  background: rgb(70, 138, 7);
+  opacity: 0;
+  -webkit-transform: translateX(-50%) translateY(-50%) rotate(71deg);
+  -moz-transform: translateX(-50%) translateY(-50%) rotate(71deg);
+  -ms-transform: translateX(-50%) translateY(-50%) rotate(71deg);
+  transform: translateX(-50%) translateY(-50%) rotate(71deg);
+
+}
+.btn-1e {
+  overflow: hidden;
+  opacity: 0;
+}
+.btn-1e:hover:after {
+  height: 260%;
+  opacity: 1;
+}
+.btn:after {
+  content: '';
+  position: absolute;
+  z-index: -1;
+  -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  transition: all 0.3s;
+}
+*, *:after, *:before {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+@-moz-keyframes slideDown {
+  0% {
+    -moz-transform-origin: 0 0;
+    -moz-transform: translateY(0%);
+  }
+
+  100% {
+    -moz-transform-origin: 0 0;
+    -moz-transform: translateY(100%);
+  }
+}
+@-webkit-keyframes slideDown {
+  0% {
+    -webkit-transform-origin: 0 0;
+    -webkit-transform: translateY(0%);
+  }
+
+  100% {
+    -webkit-transform-origin: 0 0;
+    -webkit-transform: translateY(100%);
+  }
+}
+@-o-keyframes slideDown {
+  0% {
+    -o-transform-origin: 0 0;
+    -o-transform: translateY(0%);
+  }
+
+  100% {
+    -o-transform-origin: 0 0;
+    -o-transform: translateY(100%);
+  }
+}
+@-ms-keyframes slideDown {
+  0% {
+    -ms-transform-origin: 0 0;
+    -ms-transform: translateY(0%);
+  }
+
+  100% {
+    -ms-transform-origin: 0 0;
+    -ms-transform: translateY(100%);
+  }
+}
+@keyframes slideDown {
+  0% {
+    transform-origin: 0 0;
+    transform: translateY(0%);
+  }
+
+  100% {
+    transform-origin: 0 0;
+    transform: translateY(100%);
+  }
+}
+
+
+
+.btn {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin: 60px 0 0 -120px;
+}
+.animation{
+  -webkit-animation-duration: 2s;
+  -moz-animation-duration: 2s;
+  -o-animation-duration: 2s;
+  animation-duration: 2s;
+  margin: 80px 0 0 -120px;
+  -webkit-animation-duration: opacity 2s;
+  -moz-animation-duration: opacity 2s;
+  -o-animation-duration: opacity 2s;
+  animation-duration: opacity 2s;
+  opacity: 1;
+  border-radius: 85%/75%;
+}
